# lng.c

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  liblng.c  libprol.c  lng.c  lng.h  prol.c  prol.h  test.sh
src/: liblng.c  lng.c  lng.h
